--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		  </div>
 	</header>
 
-	<section id="fh5co-home" data-section="home" style="background-image: url(images/1.jpeg);height: auto;background-size: 100% 100%;" data-stellar-background-ratio="0.5">
+<!--	<section id="fh5co-home" data-section="home" style="background-image: url(images/1.jpeg);height: auto;background-size: 100% 100%;" data-stellar-background-ratio="0.5">
 		<div class="gradient" id="particles-js"></div>
 		<div class="container">
 			<div class="text-wrap">
@@ -122,6 +122,30 @@
 		</div>
 		<div class="slant"></div>
 	</section>
+	  
+-->
+
+	    <div class="sp-container"> 
+      <div class="sp-content">
+        
+        <h2 class="frame-1">Geekhaven</h2>
+        <h2 class="frame-2">IIITA</h2>
+        <h2 class="frame-3">Presents</h2>
+        <h2 class="frame-4"></h2>
+        <h2 class="frame-5">
+          <span>Open</span>
+          <span>Code</span>
+          <span>18</span>
+        </h2>
+        <a class="sp-circle-link" href="https://geekhaven.iiita.ac.in/foss/">By Foss</a>
+      </div>
+</div>
+
+
+
+
+
+
 
 	<section id="fh5co-about" data-section="about">
 		<div class="container">
